codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_empty_searchable.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
assertion_line: 2046
expression: rendered
---
  Select a base branch

  Type to search branches

no matches

  Press enter to confirm or esc to go back
